--- a/build_logd_model.ipynb
+++ b/build_logd_model.ipynb
@@ -16,13 +16,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from tqdm.auto import tqdm\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from lightgbm import LGBMRegressor, Booster\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
+    "from lightgbm import LGBMRegressor, Booster\n",
     "from sklearn.metrics import r2_score, mean_squared_error\n",
-    "import seaborn as sns"
+    "from sklearn.model_selection import train_test_split\n",
+    "from tqdm.auto import tqdm"
    ]
   },
   {
