--- a/build_logd_model.ipynb
+++ b/build_logd_model.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "id": "empty-badge",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "id": "b1932f9b",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "id": "racial-stuart",
    "metadata": {},
    "outputs": [
@@ -61,8 +61,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 3s, sys: 3min 10s, total: 4min 14s\n",
-      "Wall time: 6min 58s\n"
+      "CPU times: user 4.86 s, sys: 3.44 s, total: 8.3 s\n",
+      "Wall time: 9.08 s\n"
      ]
     }
    ],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "id": "78258cf0",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
        "(2084724, 4)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "id": "confused-tomato",
    "metadata": {},
    "outputs": [
@@ -147,35 +147,35 @@
        "      <td>Cc1cc(-n2ncc(=O)[nH]c2=O)ccc1C(=O)c1ccccc1Cl</td>\n",
        "      <td>1</td>\n",
        "      <td>2.69</td>\n",
-       "      <td>[2.047026309140364, 1053.1866841504302, 17.267...</td>\n",
+       "      <td>[2.151684657491086, -2.0923071597340894, 2.216...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Cc1cc(-n2ncc(=O)[nH]c2=O)ccc1C(=O)c1ccc(C#N)cc1</td>\n",
        "      <td>2</td>\n",
        "      <td>1.82</td>\n",
-       "      <td>[1.988495947945752, 1118.5386170645465, 17.974...</td>\n",
+       "      <td>[2.1309007703070395, -2.0857480375944135, 2.17...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Cc1cc(-n2ncc(=O)[nH]c2=O)cc(C)c1C(O)c1ccc(Cl)cc1</td>\n",
        "      <td>3</td>\n",
        "      <td>2.64</td>\n",
-       "      <td>[2.072625090369594, 1015.4173196506215, 18.137...</td>\n",
+       "      <td>[2.1708426473880804, -2.1841553872256485, 2.29...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Cc1ccc(C(=O)c2ccc(-n3ncc(=O)[nH]c3=O)cc2)cc1</td>\n",
        "      <td>4</td>\n",
        "      <td>1.97</td>\n",
-       "      <td>[1.9257644721581226, 967.460585505423, 16.3969...</td>\n",
+       "      <td>[2.093212484023919, -2.0505383418976266, 2.126...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Cc1cc(-n2ncc(=O)[nH]c2=O)ccc1C(=O)c1ccc(Cl)cc1</td>\n",
        "      <td>5</td>\n",
        "      <td>2.57</td>\n",
-       "      <td>[2.0074536470863955, 1035.9366841504304, 17.26...</td>\n",
+       "      <td>[2.129504518042437, -2.0858337096441177, 2.182...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -190,14 +190,14 @@
        "4    Cc1cc(-n2ncc(=O)[nH]c2=O)ccc1C(=O)c1ccc(Cl)cc1     5  2.57   \n",
        "\n",
        "                                                desc  \n",
-       "0  [2.047026309140364, 1053.1866841504302, 17.267...  \n",
-       "1  [1.988495947945752, 1118.5386170645465, 17.974...  \n",
-       "2  [2.072625090369594, 1015.4173196506215, 18.137...  \n",
-       "3  [1.9257644721581226, 967.460585505423, 16.3969...  \n",
-       "4  [2.0074536470863955, 1035.9366841504304, 17.26...  "
+       "0  [2.151684657491086, -2.0923071597340894, 2.216...  \n",
+       "1  [2.1309007703070395, -2.0857480375944135, 2.17...  \n",
+       "2  [2.1708426473880804, -2.1841553872256485, 2.29...  \n",
+       "3  [2.093212484023919, -2.0505383418976266, 2.126...  \n",
+       "4  [2.129504518042437, -2.0858337096441177, 2.182...  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "id": "08b2c9d9",
    "metadata": {},
    "outputs": [],
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "id": "79227457",
    "metadata": {},
    "outputs": [
@@ -244,7 +244,7 @@
        "(2031926, 4)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,60 +262,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 71,
-   "id": "documented-contrast",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a7e48bbc68eb4786b08f66926c38c4a3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/2031926 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "df.desc = df.desc.progress_apply(lambda x: np.array(x))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b1b07fda",
-   "metadata": {},
-   "source": [
-    "One more check on the number of records. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "id": "532a46f6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2031926, 4)"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.shape"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "d0891252",
    "metadata": {},
@@ -326,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 8,
    "id": "ea861073",
    "metadata": {},
    "outputs": [
@@ -334,8 +280,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.21 s, sys: 54.3 ms, total: 1.26 s\n",
-      "Wall time: 1.28 s\n"
+      "CPU times: user 969 ms, sys: 13.9 ms, total: 983 ms\n",
+      "Wall time: 983 ms\n"
      ]
     }
    ],
@@ -354,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 9,
    "id": "least-identification",
    "metadata": {},
    "outputs": [
@@ -362,8 +308,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6.19 s, sys: 11.7 s, total: 17.9 s\n",
-      "Wall time: 24.7 s\n"
+      "CPU times: user 5.76 s, sys: 6.53 s, total: 12.3 s\n",
+      "Wall time: 15.2 s\n"
      ]
     }
    ],
@@ -385,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 10,
    "id": "conservative-manor",
    "metadata": {},
    "outputs": [
@@ -393,8 +339,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4min 46s, sys: 11.9 s, total: 4min 58s\n",
-      "Wall time: 24.9 s\n"
+      "CPU times: user 5min 3s, sys: 7.02 s, total: 5min 10s\n",
+      "Wall time: 23 s\n"
      ]
     },
     {
@@ -403,7 +349,7 @@
        "LGBMRegressor()"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
